--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - ./frontend/.env
     build:
       context: frontend
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     container_name: web
     restart: always
     ports:
@@ -16,7 +16,7 @@ services:
       - ./backend/.env
     build:
       context: backend
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     container_name: backend
     restart: always
     volumes:
